Fix field styles so that error messages wrap properly, fix prefixing on some flex styles. (omeka-s-modules/ZoteroImport#17)

--- a/application/asset/sass/_screen.scss
+++ b/application/asset/sass/_screen.scss
@@ -297,6 +297,7 @@ body {
     .field {
         @include field-row;
         display: flex;
+        flex-wrap: wrap;
 
         &:first-child {
             border-color: transparent;
@@ -507,6 +508,11 @@ div[role="main"] > .messages {
 .field .messages {
     width: 70%;
     color: $red;
+    margin-left: auto;
+
+    li {
+        box-shadow: 0 0 0 1px inset;
+    }
 }
 
 .error,
